# foldx-analyzer

./: README.md  foldx_analysis.py  pyproject.toml  requirements.txt
data/: Average_1a22_repair.fxout  Average_1ak4_repair.fxout  Average_1bp3_repair.fxout  Average_1emv_repair.fxout  Average_1gc1_repair.fxout  Average_1iar_repair.fxout  Average_1jtd_repair.fxout  Average_1ktz_repair.fxout  Average_1tm1_repair.fxout  Average_2j0t_repair.fxout  Interaction_1imh_Repair_AC.fxout
output/Average_1tm1_repair/: RepairPDB_data.csv
output/Interaction_1imh_Repair_AC/: PositionScan_data.csv
